# machinecoin-core

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Makefile  Makefile.am  README.md  autogen.sh  bitcoin-qt.pro  configure.ac  libmachinecoinconsensus.pc.in  machinecoin-qt.pro
.github/: ISSUE_TEMPLATE.md
.tx/: config
build-aux/m4/: machinecoin_find_bdb48.m4  machinecoin_qt.m4  machinecoin_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  install_db4.sh  machinecoin-cli.bash-completion  machinecoin-qt.pro  machinecoin-tx.bash-completion  machinecoind.bash-completion  qt_translations.py  tidy_datadir.sh  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  machinecoin-qt.desktop  machinecoin-qt.install  machinecoin-qt.lintian-overrides  machinecoin-qt.manpages  machinecoin-qt.protocol  machinecoin-tx.bash-completion  machinecoin-tx.install  machinecoin-tx.manpages  machinecoind.bash-completion  machinecoind.examples  machinecoind.install  machinecoind.lintian-overrides  machinecoind.manpages  rules  watch
contrib/devtools/: README.md  check-doc.py  check-rpc-mappings.py  clang-format.py  commit-script-check.sh  copyright_header.py  fix-copyright-headers.py  gen-manpages.sh  git-subtree-check.sh  github-merge.py  lint-all.sh  lint-python.sh  lint-whitespace.sh  optimize-pngs.py  security-check.py  symbol-check.py  test-security-check.py  update-translations.py
contrib/gitian-descriptors/: README  README.md  deps-win32.yml  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml  gitian-win32.yml  gitian.yml  qt-win32.yml
contrib/init/: README.md  machinecoind.conf  machinecoind.init  machinecoind.openrc  machinecoind.openrcconf  machinecoind.service  org.machinecoin.machinecoind.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  extract-osx-sdk.sh  fancy.plist  macdeployqtplus
contrib/pyminer/: example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/rpm/: README.md  machinecoin-0.12.0-libressl.patch  machinecoin.fc  machinecoin.if  machinecoin.spec  machinecoin.te
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt  nodes_test.txt
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py  gen_base58_test_vectors.py
contrib/verify-commits/: gpg.sh  pre-push-hook.sh  verify-commits.sh
contrib/verifybinaries/: README.md  verify.sh
contrib/wallettools/: walletchangepass.py  walletunlock.py
contrib/windeploy/: detached-sig-create.sh
contrib/zmq/: zmq_sub.py  zmq_sub3.4.py
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  Tor.txt  assets-attribution.md  benchmarking.md  bips.md  bootstrap.md  build-msw.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  coding.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  lecture_juergen_scholz_the_value_of_the_machinecoin.tex  multiwallet-qt.md  readme-qt.rst  reduce-traffic.md  release-notes-litecoin.md  release-notes-machinecoin.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  travis-ci.txt  unit-tests.md  (+1 more)
doc/litecoin-release-notes/: release-notes-0.13.2.md
doc/machinecoin-release-notes/: release-notes-0.13.2.md
doc/man/: Makefile.am  machinecoin-cli.1  machinecoin-qt.1  machinecoin-tx.1  machinecoind.1
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.2.md  release-notes-0.10.3.md  release-notes-0.10.4.md  release-notes-0.11.0.md  release-notes-0.11.1.md  release-notes-0.11.2.md  release-notes-0.12.0.md  release-notes-0.12.1.md  release-notes-0.13.0.md  release-notes-0.13.1.md  release-notes-0.13.2.md  release-notes-0.14.0.md  release-notes-0.14.1.md  release-notes-0.14.2.md  release-notes-0.15.0.1.md  release-notes-0.15.0.md  release-notes-0.15.1.md  release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  (+21 more)
qa/: README.md
qa/pull-tester/: rpc-tests.py  run-machinecoind-for-test.sh.in  tests_config.py.in
qa/rpc-tests/: README.md  abandonconflict.py  assumevalid.py  bip65-cltv-p2p.py  bip65-cltv.py  bip68-112-113-p2p.py  bip68-sequence.py  bip9-softforks.py  bipdersig-p2p.py  bipdersig.py  blockchain.py  bumpfee.py  create_cache.py  decodescript.py  disablewallet.py  forknotify.py  fundrawtransaction.py  getblocktemplate_longpoll.py  getblocktemplate_proposals.py  getchaintips.py  httpbasics.py  import-rescan.py  importmulti.py  invalidateblock.py  (+52 more)
share/: genbuild.sh  setup.nsi  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  batchedlogger.cpp  batchedlogger.h  bech32.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  cachemap.h  cachemultimap.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  (+176 more)
test/: README.md  config.ini.in
(+942 files in other folders)
