cmake_minimum_required(VERSION 3.15)
project(machinecoin_core_0_16)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/bench)
include_directories(src/bls)
include_directories(src/compat)
include_directories(src/config)
include_directories(src/consensus)
include_directories(src/crypto)
include_directories(src/crypto/ctaes)
include_directories(src/evo)
include_directories(src/governance)
include_directories(src/immer)
include_directories(src/immer/detail)
include_directories(src/immer/detail/arrays)
include_directories(src/immer/detail/hamts)
include_directories(src/immer/detail/rbts)
include_directories(src/immer/experimental)
include_directories(src/immer/experimental/detail)
include_directories(src/immer/heap)
include_directories(src/immer/refcount)
include_directories(src/immer/transience)
include_directories(src/leveldb/db)
include_directories(src/leveldb/helpers/memenv)
include_directories(src/leveldb/include)
include_directories(src/leveldb/include/leveldb)
include_directories(src/leveldb/port)
include_directories(src/leveldb/table)
include_directories(src/leveldb/util)
include_directories(src/llmq)
include_directories(src/masternode)
include_directories(src/policy)
include_directories(src/primitives)
include_directories(src/qt)
include_directories(src/qt/test)
include_directories(src/rpc)
include_directories(src/script)
include_directories(src/secp256k1/contrib)
include_directories(src/secp256k1/include)
include_directories(src/secp256k1/src)
include_directories(src/secp256k1/src/java)
include_directories(src/secp256k1/src/modules)
include_directories(src/secp256k1/src/modules/ecdh)
include_directories(src/secp256k1/src/modules/recovery)
include_directories(src/support)
include_directories(src/support/allocators)
include_directories(src/test)
include_directories(src/univalue)
include_directories(src/univalue/include)
include_directories(src/univalue/lib)
include_directories(src/wallet)
include_directories(src/wallet/test)
include_directories(src/zmq)

add_executable(machinecoin_core_0_16
        src/bench/base58.cpp
        src/bench/bench.cpp
        src/bench/bench.h
        src/bench/bench_machinecoin.cpp
        src/bench/ccoins_caching.cpp
        src/bench/checkblock.cpp
        src/bench/checkqueue.cpp
        src/bench/coin_selection.cpp
        src/bench/crypto_hash.cpp
        src/bench/Examples.cpp
        src/bench/lockedpool.cpp
        src/bench/mempool_eviction.cpp
        src/bench/perf.cpp
        src/bench/perf.h
        src/bench/prevector_destructor.cpp
        src/bench/rollingbloom.cpp
        src/bench/verify_script.cpp
        src/bls/bls.cpp
        src/bls/bls.h
        src/bls/bls_batchverifier.h
        src/bls/bls_ies.cpp
        src/bls/bls_ies.h
        src/bls/bls_worker.cpp
        src/bls/bls_worker.h
        src/compat/byteswap.h
        src/compat/endian.h
        src/compat/glibc_compat.cpp
        src/compat/glibc_sanity.cpp
        src/compat/glibcxx_sanity.cpp
        src/compat/sanity.h
        src/compat/strnlen.cpp
        src/config/machinecoin-config.h
        src/consensus/consensus.h
        src/consensus/merkle.cpp
        src/consensus/merkle.h
        src/consensus/params.h
        src/consensus/tx_verify.cpp
        src/consensus/tx_verify.h
        src/consensus/validation.h
        src/crypto/ctaes/bench.c
        src/crypto/ctaes/ctaes.c
        src/crypto/ctaes/ctaes.h
        src/crypto/ctaes/test.c
        src/crypto/aes.cpp
        src/crypto/aes.h
        src/crypto/aes_helper.c
        src/crypto/blake.c
        src/crypto/bmw.c
        src/crypto/chacha20.cpp
        src/crypto/chacha20.h
        src/crypto/common.h
        src/crypto/cubehash.c
        src/crypto/echo.c
        src/crypto/groestl.c
        src/crypto/hashblock.h
        src/crypto/hmac_sha256.cpp
        src/crypto/hmac_sha256.h
        src/crypto/hmac_sha512.cpp
        src/crypto/hmac_sha512.h
        src/crypto/jh.c
        src/crypto/keccak.c
        src/crypto/luffa.c
        src/crypto/ripemd160.cpp
        src/crypto/ripemd160.h
        src/crypto/scrypt-sse2.cpp
        src/crypto/scrypt.cpp
        src/crypto/scrypt.h
        src/crypto/sha1.cpp
        src/crypto/sha1.h
        src/crypto/sha256.cpp
        src/crypto/sha256.h
        src/crypto/sha256_sse4.cpp
        src/crypto/sha512.cpp
        src/crypto/sha512.h
        src/crypto/shavite.c
        src/crypto/simd.c
        src/crypto/skein.c
        src/crypto/sph_blake.h
        src/crypto/sph_bmw.h
        src/crypto/sph_cubehash.h
        src/crypto/sph_echo.h
        src/crypto/sph_groestl.h
        src/crypto/sph_jh.h
        src/crypto/sph_keccak.h
        src/crypto/sph_luffa.h
        src/crypto/sph_shavite.h
        src/crypto/sph_simd.h
        src/crypto/sph_skein.h
        src/crypto/sph_types.h
        src/evo/cbtx.cpp
        src/evo/cbtx.h
        src/evo/deterministicmns.cpp
        src/evo/deterministicmns.h
        src/evo/evodb.cpp
        src/evo/evodb.h
        src/evo/mnauth.cpp
        src/evo/mnauth.h
        src/evo/providertx.cpp
        src/evo/providertx.h
        src/evo/simplifiedmns.cpp
        src/evo/simplifiedmns.h
        src/evo/specialtx.cpp
        src/evo/specialtx.h
        src/governance/governance-classes.cpp
        src/governance/governance-classes.h
        src/governance/governance-exceptions.h
        src/governance/governance-object.cpp
        src/governance/governance-object.h
        src/governance/governance-validators.cpp
        src/governance/governance-validators.h
        src/governance/governance-vote.cpp
        src/governance/governance-vote.h
        src/governance/governance-votedb.cpp
        src/governance/governance-votedb.h
        src/governance/governance.cpp
        src/governance/governance.h
        src/immer/detail/arrays/no_capacity.hpp
        src/immer/detail/arrays/node.hpp
        src/immer/detail/arrays/with_capacity.hpp
        src/immer/detail/hamts/bits.hpp
        src/immer/detail/hamts/champ.hpp
        src/immer/detail/hamts/champ_iterator.hpp
        src/immer/detail/hamts/node.hpp
        src/immer/detail/rbts/bits.hpp
        src/immer/detail/rbts/node.hpp
        src/immer/detail/rbts/operations.hpp
        src/immer/detail/rbts/position.hpp
        src/immer/detail/rbts/rbtree.hpp
        src/immer/detail/rbts/rbtree_iterator.hpp
        src/immer/detail/rbts/rrbtree.hpp
        src/immer/detail/rbts/rrbtree_iterator.hpp
        src/immer/detail/rbts/visitor.hpp
        src/immer/detail/combine_standard_layout.hpp
        src/immer/detail/iterator_facade.hpp
        src/immer/detail/ref_count_base.hpp
        src/immer/detail/type_traits.hpp
        src/immer/detail/util.hpp
        src/immer/experimental/detail/dvektor_impl.hpp
        src/immer/experimental/dvektor.hpp
        src/immer/heap/cpp_heap.hpp
        src/immer/heap/debug_size_heap.hpp
        src/immer/heap/free_list_heap.hpp
        src/immer/heap/free_list_node.hpp
        src/immer/heap/gc_heap.hpp
        src/immer/heap/heap_policy.hpp
        src/immer/heap/identity_heap.hpp
        src/immer/heap/malloc_heap.hpp
        src/immer/heap/split_heap.hpp
        src/immer/heap/tags.hpp
        src/immer/heap/thread_local_free_list_heap.hpp
        src/immer/heap/unsafe_free_list_heap.hpp
        src/immer/heap/with_data.hpp
        src/immer/refcount/enable_intrusive_ptr.hpp
        src/immer/refcount/no_refcount_policy.hpp
        src/immer/refcount/refcount_policy.hpp
        src/immer/refcount/unsafe_refcount_policy.hpp
        src/immer/transience/gc_transience_policy.hpp
        src/immer/transience/no_transience_policy.hpp
        src/immer/algorithm.hpp
        src/immer/array.hpp
        src/immer/array_transient.hpp
        src/immer/atom.hpp
        src/immer/box.hpp
        src/immer/config.hpp
        src/immer/flex_vector.hpp
        src/immer/flex_vector_transient.hpp
        src/immer/map.hpp
        src/immer/map_transient.hpp
        src/immer/memory_policy.hpp
        src/immer/set.hpp
        src/immer/set_transient.hpp
        src/immer/vector.hpp
        src/immer/vector_transient.hpp
        src/leveldb/db/autocompact_test.cc
        src/leveldb/db/builder.cc
        src/leveldb/db/builder.h
        src/leveldb/db/c.cc
        src/leveldb/db/c_test.c
        src/leveldb/db/corruption_test.cc
        src/leveldb/db/db_bench.cc
        src/leveldb/db/db_impl.cc
        src/leveldb/db/db_impl.h
        src/leveldb/db/db_iter.cc
        src/leveldb/db/db_iter.h
        src/leveldb/db/db_test.cc
        src/leveldb/db/dbformat.cc
        src/leveldb/db/dbformat.h
        src/leveldb/db/dbformat_test.cc
        src/leveldb/db/dumpfile.cc
        src/leveldb/db/fault_injection_test.cc
        src/leveldb/db/filename.cc
        src/leveldb/db/filename.h
        src/leveldb/db/filename_test.cc
        src/leveldb/db/leveldbutil.cc
        src/leveldb/db/log_format.h
        src/leveldb/db/log_reader.cc
        src/leveldb/db/log_reader.h
        src/leveldb/db/log_test.cc
        src/leveldb/db/log_writer.cc
        src/leveldb/db/log_writer.h
        src/leveldb/db/memtable.cc
        src/leveldb/db/memtable.h
        src/leveldb/db/recovery_test.cc
        src/leveldb/db/repair.cc
        src/leveldb/db/skiplist.h
        src/leveldb/db/skiplist_test.cc
        src/leveldb/db/snapshot.h
        src/leveldb/db/table_cache.cc
        src/leveldb/db/table_cache.h
        src/leveldb/db/version_edit.cc
        src/leveldb/db/version_edit.h
        src/leveldb/db/version_edit_test.cc
        src/leveldb/db/version_set.cc
        src/leveldb/db/version_set.h
        src/leveldb/db/version_set_test.cc
        src/leveldb/db/write_batch.cc
        src/leveldb/db/write_batch_internal.h
        src/leveldb/db/write_batch_test.cc
        src/leveldb/doc/bench/db_bench_sqlite3.cc
        src/leveldb/doc/bench/db_bench_tree_db.cc
        src/leveldb/helpers/memenv/memenv.cc
        src/leveldb/helpers/memenv/memenv.h
        src/leveldb/helpers/memenv/memenv_test.cc
        src/leveldb/include/leveldb/c.h
        src/leveldb/include/leveldb/cache.h
        src/leveldb/include/leveldb/comparator.h
        src/leveldb/include/leveldb/db.h
        src/leveldb/include/leveldb/dumpfile.h
        src/leveldb/include/leveldb/env.h
        src/leveldb/include/leveldb/filter_policy.h
        src/leveldb/include/leveldb/iterator.h
        src/leveldb/include/leveldb/options.h
        src/leveldb/include/leveldb/slice.h
        src/leveldb/include/leveldb/status.h
        src/leveldb/include/leveldb/table.h
        src/leveldb/include/leveldb/table_builder.h
        src/leveldb/include/leveldb/write_batch.h
        src/leveldb/issues/issue178_test.cc
        src/leveldb/issues/issue200_test.cc
        src/leveldb/port/atomic_pointer.h
        src/leveldb/port/port.h
        src/leveldb/port/port_example.h
        src/leveldb/port/port_posix.cc
        src/leveldb/port/port_posix.h
        src/leveldb/port/port_posix_sse.cc
        src/leveldb/port/thread_annotations.h
        src/leveldb/table/block.cc
        src/leveldb/table/block.h
        src/leveldb/table/block_builder.cc
        src/leveldb/table/block_builder.h
        src/leveldb/table/filter_block.cc
        src/leveldb/table/filter_block.h
        src/leveldb/table/filter_block_test.cc
        src/leveldb/table/format.cc
        src/leveldb/table/format.h
        src/leveldb/table/iterator.cc
        src/leveldb/table/iterator_wrapper.h
        src/leveldb/table/merger.cc
        src/leveldb/table/merger.h
        src/leveldb/table/table.cc
        src/leveldb/table/table_builder.cc
        src/leveldb/table/table_test.cc
        src/leveldb/table/two_level_iterator.cc
        src/leveldb/table/two_level_iterator.h
        src/leveldb/util/arena.cc
        src/leveldb/util/arena.h
        src/leveldb/util/arena_test.cc
        src/leveldb/util/bloom.cc
        src/leveldb/util/bloom_test.cc
        src/leveldb/util/cache.cc
        src/leveldb/util/cache_test.cc
        src/leveldb/util/coding.cc
        src/leveldb/util/coding.h
        src/leveldb/util/coding_test.cc
        src/leveldb/util/comparator.cc
        src/leveldb/util/crc32c.cc
        src/leveldb/util/crc32c.h
        src/leveldb/util/crc32c_test.cc
        src/leveldb/util/env.cc
        src/leveldb/util/env_posix.cc
        src/leveldb/util/env_posix_test.cc
        src/leveldb/util/env_posix_test_helper.h
        src/leveldb/util/env_test.cc
        src/leveldb/util/env_win.cc
        src/leveldb/util/filter_policy.cc
        src/leveldb/util/hash.cc
        src/leveldb/util/hash.h
        src/leveldb/util/hash_test.cc
        src/leveldb/util/histogram.cc
        src/leveldb/util/histogram.h
        src/leveldb/util/logging.cc
        src/leveldb/util/logging.h
        src/leveldb/util/mutexlock.h
        src/leveldb/util/options.cc
        src/leveldb/util/posix_logger.h
        src/leveldb/util/random.h
        src/leveldb/util/status.cc
        src/leveldb/util/testharness.cc
        src/leveldb/util/testharness.h
        src/leveldb/util/testutil.cc
        src/leveldb/util/testutil.h
        src/llmq/quorums.cpp
        src/llmq/quorums.h
        src/llmq/quorums_blockprocessor.cpp
        src/llmq/quorums_blockprocessor.h
        src/llmq/quorums_chainlocks.cpp
        src/llmq/quorums_chainlocks.h
        src/llmq/quorums_commitment.cpp
        src/llmq/quorums_commitment.h
        src/llmq/quorums_debug.cpp
        src/llmq/quorums_debug.h
        src/llmq/quorums_dkgsession.cpp
        src/llmq/quorums_dkgsession.h
        src/llmq/quorums_dkgsessionhandler.cpp
        src/llmq/quorums_dkgsessionhandler.h
        src/llmq/quorums_dkgsessionmgr.cpp
        src/llmq/quorums_dkgsessionmgr.h
        src/llmq/quorums_init.cpp
        src/llmq/quorums_init.h
        src/llmq/quorums_instantsend.cpp
        src/llmq/quorums_instantsend.h
        src/llmq/quorums_signing.cpp
        src/llmq/quorums_signing.h
        src/llmq/quorums_signing_shares.cpp
        src/llmq/quorums_signing_shares.h
        src/llmq/quorums_utils.cpp
        src/llmq/quorums_utils.h
        src/masternode/activemasternode.cpp
        src/masternode/activemasternode.h
        src/masternode/masternode-meta.cpp
        src/masternode/masternode-meta.h
        src/masternode/masternode-payments.cpp
        src/masternode/masternode-payments.h
        src/masternode/masternode-sync.cpp
        src/masternode/masternode-sync.h
        src/masternode/masternode-utils.cpp
        src/masternode/masternode-utils.h
        src/policy/feerate.cpp
        src/policy/feerate.h
        src/policy/fees.cpp
        src/policy/fees.h
        src/policy/policy.cpp
        src/policy/policy.h
        src/policy/rbf.cpp
        src/policy/rbf.h
        src/primitives/block.cpp
        src/primitives/block.h
        src/primitives/transaction.cpp
        src/primitives/transaction.h
        src/qt/test/compattests.cpp
        src/qt/test/compattests.h
        src/qt/test/paymentrequestdata.h
        src/qt/test/paymentservertests.cpp
        src/qt/test/paymentservertests.h
        src/qt/test/rpcnestedtests.cpp
        src/qt/test/rpcnestedtests.h
        src/qt/test/test_main.cpp
        src/qt/test/uritests.cpp
        src/qt/test/uritests.h
        src/qt/test/wallettests.cpp
        src/qt/test/wallettests.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bantablemodel.cpp
        src/qt/bantablemodel.h
        src/qt/callback.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/intro.cpp
        src/qt/intro.h
        src/qt/macdockiconhandler.h
        src/qt/macdockiconhandler.mm
        src/qt/machinecoin.cpp
        src/qt/machinecoinaddressvalidator.cpp
        src/qt/machinecoinaddressvalidator.h
        src/qt/machinecoinamountfield.cpp
        src/qt/machinecoinamountfield.h
        src/qt/machinecoingui.cpp
        src/qt/machinecoingui.h
        src/qt/machinecoinstrings.cpp
        src/qt/machinecoinunits.cpp
        src/qt/machinecoinunits.h
        src/qt/macnotificationhandler.h
        src/qt/macnotificationhandler.mm
        src/qt/masternodelist.cpp
        src/qt/masternodelist.h
        src/qt/modaloverlay.cpp
        src/qt/modaloverlay.h
        src/qt/networkstyle.cpp
        src/qt/networkstyle.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/openuridialog.cpp
        src/qt/openuridialog.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/paymentrequestplus.cpp
        src/qt/paymentrequestplus.h
        src/qt/paymentserver.cpp
        src/qt/paymentserver.h
        src/qt/peertablemodel.cpp
        src/qt/peertablemodel.h
        src/qt/platformstyle.cpp
        src/qt/platformstyle.h
        src/qt/qrdialog.cpp
        src/qt/qrdialog.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/receivecoinsdialog.cpp
        src/qt/receivecoinsdialog.h
        src/qt/receiverequestdialog.cpp
        src/qt/receiverequestdialog.h
        src/qt/recentrequeststablemodel.cpp
        src/qt/recentrequeststablemodel.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/splashscreen.cpp
        src/qt/splashscreen.h
        src/qt/trafficgraphwidget.cpp
        src/qt/trafficgraphwidget.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/utilitydialog.cpp
        src/qt/utilitydialog.h
        src/qt/walletframe.cpp
        src/qt/walletframe.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/qt/walletmodeltransaction.cpp
        src/qt/walletmodeltransaction.h
        src/qt/walletview.cpp
        src/qt/walletview.h
        src/qt/winshutdownmonitor.cpp
        src/qt/winshutdownmonitor.h
        src/rpc/blockchain.cpp
        src/rpc/blockchain.h
        src/rpc/client.cpp
        src/rpc/client.h
        src/rpc/governance.cpp
        src/rpc/masternode.cpp
        src/rpc/mining.cpp
        src/rpc/mining.h
        src/rpc/misc.cpp
        src/rpc/net.cpp
        src/rpc/protocol.cpp
        src/rpc/protocol.h
        src/rpc/rawtransaction.cpp
        src/rpc/register.h
        src/rpc/rpcevo.cpp
        src/rpc/rpcquorums.cpp
        src/rpc/safemode.cpp
        src/rpc/safemode.h
        src/rpc/server.cpp
        src/rpc/server.h
        src/rpc/util.cpp
        src/rpc/util.h
        src/script/interpreter.cpp
        src/script/interpreter.h
        src/script/ismine.cpp
        src/script/ismine.h
        src/script/machinecoinconsensus.cpp
        src/script/machinecoinconsensus.h
        src/script/script.cpp
        src/script/script.h
        src/script/script_error.cpp
        src/script/script_error.h
        src/script/sigcache.cpp
        src/script/sigcache.h
        src/script/sign.cpp
        src/script/sign.h
        src/script/standard.cpp
        src/script/standard.h
        src/secp256k1/contrib/lax_der_parsing.c
        src/secp256k1/contrib/lax_der_parsing.h
        src/secp256k1/contrib/lax_der_privatekey_parsing.c
        src/secp256k1/contrib/lax_der_privatekey_parsing.h
        src/secp256k1/include/secp256k1.h
        src/secp256k1/include/secp256k1_ecdh.h
        src/secp256k1/include/secp256k1_recovery.h
        src/secp256k1/src/java/org_machinecoin_NativeSecp256k1.c
        src/secp256k1/src/java/org_machinecoin_NativeSecp256k1.h
        src/secp256k1/src/java/org_machinecoin_Secp256k1Context.c
        src/secp256k1/src/java/org_machinecoin_Secp256k1Context.h
        src/secp256k1/src/modules/ecdh/main_impl.h
        src/secp256k1/src/modules/ecdh/tests_impl.h
        src/secp256k1/src/modules/recovery/main_impl.h
        src/secp256k1/src/modules/recovery/tests_impl.h
        src/secp256k1/src/basic-config.h
        src/secp256k1/src/bench.h
        src/secp256k1/src/bench_ecdh.c
        src/secp256k1/src/bench_internal.c
        src/secp256k1/src/bench_recover.c
        src/secp256k1/src/bench_sign.c
        src/secp256k1/src/bench_verify.c
        src/secp256k1/src/ecdsa.h
        src/secp256k1/src/ecdsa_impl.h
        src/secp256k1/src/eckey.h
        src/secp256k1/src/eckey_impl.h
        src/secp256k1/src/ecmult.h
        src/secp256k1/src/ecmult_const.h
        src/secp256k1/src/ecmult_const_impl.h
        src/secp256k1/src/ecmult_gen.h
        src/secp256k1/src/ecmult_gen_impl.h
        src/secp256k1/src/ecmult_impl.h
        src/secp256k1/src/field.h
        src/secp256k1/src/field_10x26.h
        src/secp256k1/src/field_10x26_impl.h
        src/secp256k1/src/field_5x52.h
        src/secp256k1/src/field_5x52_asm_impl.h
        src/secp256k1/src/field_5x52_impl.h
        src/secp256k1/src/field_5x52_int128_impl.h
        src/secp256k1/src/field_impl.h
        src/secp256k1/src/gen_context.c
        src/secp256k1/src/group.h
        src/secp256k1/src/group_impl.h
        src/secp256k1/src/hash.h
        src/secp256k1/src/hash_impl.h
        src/secp256k1/src/libsecp256k1-config.h
        src/secp256k1/src/num.h
        src/secp256k1/src/num_gmp.h
        src/secp256k1/src/num_gmp_impl.h
        src/secp256k1/src/num_impl.h
        src/secp256k1/src/scalar.h
        src/secp256k1/src/scalar_4x64.h
        src/secp256k1/src/scalar_4x64_impl.h
        src/secp256k1/src/scalar_8x32.h
        src/secp256k1/src/scalar_8x32_impl.h
        src/secp256k1/src/scalar_impl.h
        src/secp256k1/src/scalar_low.h
        src/secp256k1/src/scalar_low_impl.h
        src/secp256k1/src/secp256k1.c
        src/secp256k1/src/testrand.h
        src/secp256k1/src/testrand_impl.h
        src/secp256k1/src/tests.c
        src/secp256k1/src/tests_exhaustive.c
        src/secp256k1/src/util.h
        src/support/allocators/mt_pooled_secure.h
        src/support/allocators/pooled_secure.h
        src/support/allocators/secure.h
        src/support/allocators/zeroafterfree.h
        src/support/cleanse.cpp
        src/support/cleanse.h
        src/support/events.h
        src/support/lockedpool.cpp
        src/support/lockedpool.h
        src/test/addrman_tests.cpp
        src/test/allocator_tests.cpp
        src/test/amount_tests.cpp
        src/test/arith_uint256_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bech32_tests.cpp
        src/test/bip32_tests.cpp
        src/test/blockchain_tests.cpp
        src/test/blockencodings_tests.cpp
        src/test/bloom_tests.cpp
        src/test/bswap_tests.cpp
        src/test/checkqueue_tests.cpp
        src/test/coins_tests.cpp
        src/test/compress_tests.cpp
        src/test/crypto_tests.cpp
        src/test/cuckoocache_tests.cpp
        src/test/dbwrapper_tests.cpp
        src/test/DoS_tests.cpp
        src/test/getarg_tests.cpp
        src/test/hash_tests.cpp
        src/test/key_tests.cpp
        src/test/limitedmap_tests.cpp
        src/test/main_tests.cpp
        src/test/mempool_tests.cpp
        src/test/merkle_tests.cpp
        src/test/merkleblock_tests.cpp
        src/test/miner_tests.cpp
        src/test/multisig_tests.cpp
        src/test/net_tests.cpp
        src/test/netbase_tests.cpp
        src/test/pmt_tests.cpp
        src/test/policyestimator_tests.cpp
        src/test/pow_tests.cpp
        src/test/prevector_tests.cpp
        src/test/raii_event_tests.cpp
        src/test/random_tests.cpp
        src/test/reverselock_tests.cpp
        src/test/rpc_tests.cpp
        src/test/sanity_tests.cpp
        src/test/scheduler_tests.cpp
        src/test/script_P2SH_tests.cpp
        src/test/script_standard_tests.cpp
        src/test/script_tests.cpp
        src/test/scriptnum10.h
        src/test/scriptnum_tests.cpp
        src/test/serialize_tests.cpp
        src/test/sighash_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/skiplist_tests.cpp
        src/test/streams_tests.cpp
        src/test/test_machinecoin.cpp
        src/test/test_machinecoin.h
        src/test/test_machinecoin_fuzzy.cpp
        src/test/test_machinecoin_main.cpp
        src/test/timedata_tests.cpp
        src/test/torcontrol_tests.cpp
        src/test/transaction_tests.cpp
        src/test/txvalidation_tests.cpp
        src/test/txvalidationcache_tests.cpp
        src/test/uint256_tests.cpp
        src/test/util_tests.cpp
        src/test/versionbits_tests.cpp
        src/univalue/gen/gen.cpp
        src/univalue/include/univalue.h
        src/univalue/lib/univalue.cpp
        src/univalue/lib/univalue_escapes.h
        src/univalue/lib/univalue_get.cpp
        src/univalue/lib/univalue_read.cpp
        src/univalue/lib/univalue_utffilter.h
        src/univalue/lib/univalue_write.cpp
        src/univalue/test/no_nul.cpp
        src/univalue/test/object.cpp
        src/univalue/test/test_json.cpp
        src/univalue/test/unitester.cpp
        src/univalue/univalue-config.h
        src/wallet/test/accounting_tests.cpp
        src/wallet/test/crypto_tests.cpp
        src/wallet/test/wallet_test_fixture.cpp
        src/wallet/test/wallet_test_fixture.h
        src/wallet/test/wallet_tests.cpp
        src/wallet/coincontrol.h
        src/wallet/crypter.cpp
        src/wallet/crypter.h
        src/wallet/db.cpp
        src/wallet/db.h
        src/wallet/feebumper.cpp
        src/wallet/feebumper.h
        src/wallet/fees.cpp
        src/wallet/fees.h
        src/wallet/init.cpp
        src/wallet/init.h
        src/wallet/rpcdump.cpp
        src/wallet/rpcwallet.cpp
        src/wallet/rpcwallet.h
        src/wallet/wallet.cpp
        src/wallet/wallet.h
        src/wallet/walletdb.cpp
        src/wallet/walletdb.h
        src/wallet/walletutil.cpp
        src/wallet/walletutil.h
        src/zmq/zmqabstractnotifier.cpp
        src/zmq/zmqabstractnotifier.h
        src/zmq/zmqconfig.h
        src/zmq/zmqnotificationinterface.cpp
        src/zmq/zmqnotificationinterface.h
        src/zmq/zmqpublishnotifier.cpp
        src/zmq/zmqpublishnotifier.h
        src/addrdb.cpp
        src/addrdb.h
        src/addrman.cpp
        src/addrman.h
        src/amount.h
        src/arith_uint256.cpp
        src/arith_uint256.h
        src/base58.cpp
        src/base58.h
        src/batchedlogger.cpp
        src/batchedlogger.h
        src/bech32.cpp
        src/bech32.h
        src/blockencodings.cpp
        src/blockencodings.h
        src/bloom.cpp
        src/bloom.h
        src/cachemap.h
        src/cachemultimap.h
        src/chain.cpp
        src/chain.h
        src/chainparams.cpp
        src/chainparams.h
        src/chainparamsbase.cpp
        src/chainparamsbase.h
        src/chainparamsseeds.h
        src/checkpoints.cpp
        src/checkpoints.h
        src/checkqueue.h
        src/clientversion.cpp
        src/clientversion.h
        src/coins.cpp
        src/coins.h
        src/compat.h
        src/compressor.cpp
        src/compressor.h
        src/core_io.h
        src/core_memusage.h
        src/core_read.cpp
        src/core_write.cpp
        src/cuckoocache.h
        src/ctpl.h
        src/cxxtimer.hpp
        src/dbwrapper.cpp
        src/dbwrapper.h
        src/dsnotificationinterface.cpp
        src/dsnotificationinterface.h
        src/flat-database.h
        src/fs.cpp
        src/fs.h
        src/hash.cpp
        src/hash.h
        src/httprpc.cpp
        src/httprpc.h
        src/httpserver.cpp
        src/httpserver.h
        src/indirectmap.h
        src/init.cpp
        src/init.h
        src/key.cpp
        src/key.h
        src/keystore.cpp
        src/keystore.h
        src/limitedmap.h
        src/machinecoin-cli.cpp
        src/machinecoin-tx.cpp
        src/machinecoind.cpp
        src/memusage.h
        src/merkleblock.cpp
        src/merkleblock.h
        src/messagesigner.cpp
        src/messagesigner.h
        src/miner.cpp
        src/miner.h
        src/net.cpp
        src/net.h
        src/net_processing.cpp
        src/net_processing.h
        src/netaddress.cpp
        src/netaddress.h
        src/netbase.cpp
        src/netbase.h
        src/netfulfilledman.cpp
        src/netfulfilledman.h
        src/netmessagemaker.h
        src/noui.cpp
        src/noui.h
        src/pow.cpp
        src/pow.h
        src/prevector.h
        src/protocol.cpp
        src/protocol.h
        src/pubkey.cpp
        src/pubkey.h
        src/random.cpp
        src/random.h
        src/rest.cpp
        src/reverse_iterator.h
        src/reverselock.h
        src/saltedhasher.cpp
        src/saltedhasher.h
        src/unordered_lru_cache.h
        src/scheduler.cpp
        src/scheduler.h
        src/serialize.h
        src/streams.h
        src/sync.cpp
        src/sync.h
        src/threadinterrupt.cpp
        src/threadinterrupt.h
        src/threadsafety.h
        src/timedata.cpp
        src/timedata.h
        src/tinyformat.h
        src/torcontrol.cpp
        src/torcontrol.h
        src/txdb.cpp
        src/txdb.h
        src/txmempool.cpp
        src/txmempool.h
        src/ui_interface.cpp
        src/ui_interface.h
        src/uint256.cpp
        src/uint256.h
        src/undo.h
        src/util.cpp
        src/util.h
        src/utilmoneystr.cpp
        src/utilmoneystr.h
        src/utilstrencodings.cpp
        src/utilstrencodings.h
        src/utiltime.cpp
        src/utiltime.h
        src/validation.cpp
        src/validation.h
        src/validationinterface.cpp
        src/validationinterface.h
        src/version.h
        src/versionbits.cpp
        src/versionbits.h
        src/warnings.cpp
        src/warnings.h)
